# rljson

./: .gitignore  README.md  meson.build  rljson.h  run-tests.sh
examples/: readme-expanded.json  readme.c  readme.json
rljson/: rljson-auto.c  rljson-auto.h  rljson-core.c  rljson-core.h
src/: json.c  json.h  meson.build  rljson-auto.c  rljson-auto.h  rljson.c  rljson.h  test-rljson-auto.c
tests/: meson.build  test.c
